# osu-launcher-rs

./: .gitignore  Cargo.toml  README.md  launcher_config2.json
src/: main.rs  process.rs
src/config/: data.rs  manager.rs  mod.rs
src/config/error/: app_data_error.rs  app_process_error.rs  mod.rs
src/config/traits/: app_data.rs  mod.rs
src/util/: file.rs  general.rs  mod.rs  win.rs
