[package]
name = "osu-launcher-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
dirs = "5.0.1"
futures = "0.3.29"
notify = "6.1.1"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
winapi = { version = "0.3.9", features = ["winuser"] }
zip = "0.6.6"
